fix: utility alignment issues

--- a/express/experiments/ccx0027/blocks/quick-action1/quick-action.css
+++ b/express/experiments/ccx0027/blocks/quick-action1/quick-action.css
@@ -60,6 +60,7 @@ ccl-quick-action a[data-action='Download'] lottie-player {
     border-radius: 0.75rem;
     cursor: pointer;
     box-shadow: 0 0 20px 2px rgb(0 0 0 / 16%);
+    margin-left: 50px;
 }
 
 .mock-ccl-quick-action:hover {
@@ -170,7 +171,7 @@ ccl-quick-action a.button[data-action="Download"]:focus {
 .quick-action .before-action .quick-action-media {
     width: 445px;
     height: 445px;
-    margin: 0 10px 0 0;
+    margin: 0 10px 0 10px;
 }
 
 .quick-action .before-action .quick-action-media img {
@@ -180,7 +181,6 @@ ccl-quick-action a.button[data-action="Download"]:focus {
 .quick-action .before-action .hero-animation-overlay {
     display: flex;
     align-items: center;
-    justify-content: center;
 }
 
 .quick-action .before-action h1,
